@@ -46,7 +46,7 @@ debug_ssl=YES
 syslog_enable=YES
 #
 # Personalização do Banner do Vsftp Server.
-ftpd_banner=Bem-vindo ao Serviço de FTP do Bora para Prática.
+ftpd_banner=Bem-vindo ao Serviço de FTP do Bora para Pratica.
 #
 # Restrição dos usuários locais a seus diretórios pessoais no Vsftp Server.
 chroot_local_user=YES
