@@ -197,4 +197,3 @@ color_e="CEC2E8"
 color_x="C1B2E2"
 LoadPlugin="hashfiles"
 ExtraTrackedRowsLimit=500
-
