@@ -1,0 +1,18 @@
+# Autor: Robson Vaamonde
+# Site: www.procedimentosemti.com.br
+# Facebook: facebook.com/ProcedimentosEmTI
+# Facebook: facebook.com/BoraParaPratica
+# YouTube: youtube.com/BoraParaPratica
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Github: https://github.com/vaamonde
+# Data de criação: 09/04/2022
+# Data de atualização: 09/04/2022
+# Versão: 0.01
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
+# Testado e homologado para a versão do NFS Server v4.x
+
+# Configuração da inicialização do módulo do Kernel BlockLayoutDriver utilizado
+# pelo serviço do NFS Server
+[Service]
+ExecStartPre=/usr/sbin/modprobe blocklayoutdriver
